@@ -28,6 +28,9 @@ public class ModItems {
 
     // Weapons
     public static final Item CHILI_BULLET = new Item(new Item.Properties());
+    public static final Item UPGRADE_GUN_BAYONET = new UpgradeGunBayonet(new Item.Properties());
+    public static final Item UPGRADE_GUN_BARREL = new UpgradeGunBarrel(new Item.Properties());
+    public static final Item UPGRADE_GUN_MECHANISM = new UpgradeGunMechanism(new Item.Properties());
     public static final Item GUN = new ChiliBulletGun(new Item.Properties().stacksTo(1).durability(512));
     public static final Item BAYONETED_GUN = new ChiliBulletGunBayoneted(new Item.Properties().stacksTo(1).durability(512));
     public static final Item MACHINE_GUN = new ChiliBulletMachineGun(new Item.Properties().stacksTo(1).durability(512).rarity(Rarity.RARE).fireResistant());
