@@ -1,13 +1,0 @@
-{
-  "type": "minecraft:smithing_transform",
-  "addition": {
-    "item": "minecraft:iron_sword"
-  },
-  "base": {
-    "item": "chilibulletweapons:gun"
-  },
-  "result": {
-    "item": "chilibulletweapons:bayoneted_gun"
-  },
-  "template": []
-}
